[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <link href="/ui/style.css" rel="stylesheet" />
+        <script>
+            function redirect(){
+                window.location.replace("https://imad.hasura.io/form.html");
+            }
+        </script>
     </head>
     <body>
         <div class="center">
@@ -11,5 +16,6 @@
         <div class="center text-big bold">
             Hi! Welcome IMAD enthusiast Dhruvi's Web application.
         </div>
+        <input type="button" value="Go" onclick="redirect()> 
     </body>
 </html>
