[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,6 +16,6 @@
         <div class="center text-big bold">
             Hi! Welcome IMAD enthusiast Dhruvi's Web application.
         </div>
-        <input type="button" value="Go" onclick="redirect()> 
+        <button value="Go" onclick="redirect()" > </button>
     </body>
 </html>
