--- a/ui/index.html
+++ b/ui/index.html
@@ -13,9 +13,10 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div>
             Hi! Welcome IMAD enthusiast Dhruvi's Web application.
+            <button value="Go" onclick="redirect()" > </button>
         </div>
-        <button value="Go" onclick="redirect()" > </button>
+        
     </body>
 </html>
