[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
         <br>
         <div>
             Hi! Welcome IMAD enthusiast Dhruvi's Web application.
-            <button value="Go" onclick="redirect()" > </button>
+            <button  align = "center" value="Go" onclick="redirect()" > </button>
         </div>
         
     </body>
