[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
         <script>
             function redirect(){
-                window.location.replace("https://imad.hasura.io/form.html");
+                window.location.("https://imad.hasura.io/form.html");
             }
         </script>
     </head>
@@ -13,9 +13,9 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div>
-            Hi! Welcome IMAD enthusiast Dhruvi's Web application.
-            <button  align = "center" value="Go" onclick="redirect()" > </button>
+        <div align="center">
+            Hi! Welcome IMAD enthusiast Dhruvi's Web application.<br>
+            <button  align = "center" name="Go" onclick="redirect()" > </button>
         </div>
         
     </body>
