[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
         <script>
             function redirect(){
-                window.location.("https://imad.hasura.io/form.html");
+                window.location.("http://u16it055.imad.hasura-app.io/form.html");
             }
         </script>
     </head>
@@ -15,7 +15,7 @@
         <br>
         <div align="center">
             Hi! Welcome IMAD enthusiast Dhruvi's Web application.<br>
-            <button  align = "center" name="Go" onclick="redirect()" > </button>
+            <button  align = "center" name="GO" onclick="redirect()" > </button>
         </div>
         
     </body>
