--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
         <script>
             function redirect(){
-                window.location.("http://u16it055.imad.hasura-app.io/form.html");
+                window.location.("http://u16it055.imad.hasura-app.io/ui/form.html");
             }
         </script>
     </head>
