[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,10 @@
         <div align="center">
             Hi! Welcome IMAD enthusiast Dhruvi's Web application.<br>
          </div>
-         <button  align = "center" name="GO" onclick="redirect()" > </button>
+         <div>
+              <button id="b1" align = "center" name="GO" onclick="redirect()" > </button>
+         </div>
+        
         
     </body>
 </html>
