[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,8 +16,9 @@
         <div align="center">
             Hi! Welcome IMAD enthusiast Dhruvi's Web application.<br>
          </div>
-         <div>
-              <button id="b1" align = "center" name="GO" onclick="redirect()"> </button>
+         <div align="center">
+              <button id="b1"  value="GO" name="GO" 
+              onclick="redirect()"> </button>
          </div>
         
         
