[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,8 +17,7 @@
             Hi! Welcome IMAD enthusiast Dhruvi's Web application.<br>
          </div>
          <div align="center">
-              <button id="b1"  value="GO" name="GO" 
-              onclick="redirect()"> </button>
+              <button id="b1" onclick="redirect()">GO TO APP</button>
          </div>
         
         
