[imad-console] Updates ui/form.html

--- a/ui/form.html
+++ b/ui/form.html
@@ -38,6 +38,7 @@
 </head>	
 <body>
 <h1 align="center" >Registration</h1>
+<div align="center">
 <form id="myform">
 <table>
 <tr>
@@ -47,6 +48,14 @@
 <tr>
 	<td>Lastname:</td>
 	<td><input type="text" name="Lastname" id="lname"></td>
+</tr>
+<tr>
+	<td>Contact No:</td>
+	<td><input type="text" name="no" id="cno"></td>
+</tr>
+<tr>
+	<td>Email Id:</td>
+	<td><input type="text" name="email" id="mail"></td>
 </tr>
 <tr>
 	<td>Address:</td>
@@ -78,5 +87,6 @@
 </table>
 </form>
 <input type="submit"  value="Submit"  onclick ="validation()">
+</div>
 </body>
 </html>
