--- a/ui/form.html
+++ b/ui/form.html
@@ -36,10 +36,10 @@
              }
 </script>
 </head>	
-<body>
+<body >
 <h1 align="center" >Registration</h1>
 <div align="center">
-<form id="myform">
+<form id="myform" method="get" action="ui/form.php">
 <table>
 <tr>
 	<td>Firstname:</td>
