--- a/ui/form.html
+++ b/ui/form.html
@@ -39,7 +39,7 @@
 <body >
 <h1 align="center" >Registration</h1>
 <div align="center">
-<form id="myform" method="post" action="/thank">
+<form id="myform" method="get" action="/thank">
 <table>
 <tr>
 	<td>Firstname:</td>
