--- a/ui/form.html
+++ b/ui/form.html
@@ -1,40 +1,7 @@
-<html>
+<html ng-app>
 <head>
 	<title>Registration</title>
-    <script type="text/javascript">
-        
-        function validation(){
-            var fname = document.getElementById('fname').value;
-            var lname = document.getElementById('lname').value;
-            var add = document.getElementById('add').value;
-            var list = document.getElementById('select').value;
-            var radselect= radio(radbtn);
-            var checkk=checkl();
-        }
-            function radio(rad){
-                var radbtn = document.getElementsByName('gender');
-                for(var i=0; i<rad.length; i++)
-             {
-                if(rad[i].checked)
-                {
-                    return rad[i].value;
-                }
-             }}
-
-             function checkl(){
-             var check = document.getElementsByName('checkbox');
-             var checkll="";
-               for(var i=0; i<check.length; i++)
-             {
-                if(check[i].checked == true)
-                {
-                  
-                  checkll = checkll + check[i].value + "<br>";
-                 }
-             }
-             return checkll;
-             }
-</script>
+     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 </head>	
 <body >
 <h1 align="center" >Registration</h1>
