--- a/ui/form.html
+++ b/ui/form.html
@@ -1,59 +1,13 @@
-<html ng-app>
+<html>
 <head>
 	<title>Registration</title>
      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 </head>	
-<body >
+<body>
 <h1 align="center" >Registration</h1>
-<div align="center">
-<form id="myform">
-<table>
-<tr>
-	<td>Firstname:</td>
-	<td><input type="text" name="Firstname" id="fname"></td>
-</tr>
-<tr>
-	<td>Lastname:</td>
-	<td><input type="text" name="Lastname" id="lname"></td>
-</tr>
-<tr>
-	<td>Contact No:</td>
-	<td><input type="text" name="no" id="cno"></td>
-</tr>
-<tr>
-	<td>Email Id:</td>
-	<td><input type="text" name="email" id="mail"></td>
-</tr>
-<tr>
-	<td>Address:</td>
-	<td>
-    <textarea name="Address" rows="5" cols="20" id="add">
-    </textarea></td>
-</tr>
-<tr>
-    <td>State:</td>
-    <td> <select name="State" id="select" >
-    	<option value="Gujarat">Gujarat</option>
-    	<option value="Maharastra">Maharashtra</option>
-    	<option value="Tamil_Nadu">Tamil Nadu</option>
-    </select></td>
-</tr>
-<tr>
-    <td>Gender:</td>
-<td>
-    <input type="radio" name="gender" value="male">
-    Male
-    <input type="radio" name="gender" value="female">
-    Female
-</td> 
-</tr>   
-<tr>
-    <td><input type="checkbox" name="checkbox" value="yes">Yes</td>
-    <td><input type="checkbox" name="checkbox" value="no">No</td>
-</tr>
-</table>
-</form>
-<input type="submit"  value="Submit"  onclick ="validation()">
+<div ng-app>
+    <input type="text" ng-model="name">
+    <p ng-bind="name"></p>
 </div>
 </body>
 </html>
