[imad-console] Updates ui/form.html

--- a/ui/form.html
+++ b/ui/form.html
@@ -6,8 +6,8 @@
 <body>
 <h1 align="center" >Registration</h1>
 <div ng-app>
-    <input type="text" ng-model="name">
-    <p ng-bind="name"></p>
+    Enter name:<input type="text" ng-model="name"><br>
+    You entered: <p ng-bind="name"></p>
 </div>
 </body>
 </html>
