--- a/ui/form.html
+++ b/ui/form.html
@@ -6,8 +6,9 @@
 <body>
 <h1 align="center" >Registration</h1>
 <div ng-app>
-    Enter name:<input type="text" ng-model="name"><br>
-    You entered: <p ng-bind="name"></p>
+    Enter n1:<input type="text" ng-model="name1"><br>
+    Enter n2:<input type="text" ng-model="name2"><br>
+    n1+n2 <p {{ name1 +name2}}></p>
 </div>
 </body>
 </html>
