--- a/ui/form.html
+++ b/ui/form.html
@@ -5,10 +5,25 @@
 </head>	
 <body>
 <h1 align="center" >Registration</h1>
-<div ng-app>
-    Enter n1:<input type="text" ng-model="name1"><br>
-    Enter n2:<input type="text" ng-model="name2"><br>
-    n1+n2 <p {{ name1 +name2}}></p>
-</div>
+<div ng-app="" ng-controller="Controller">
+    Enter n1:<input type="text" ng-model="Text.name1"><br>
+    Enter n2:<input type="text" ng-model="Text.name2"><br>
+    <p> You are entering: {{Text.display()}}</p>
+    </div>
+    <script>
+        function Controller($scope){
+            $scope.Text{
+                name1="Mahesh",
+                name2="Bhatt",
+                display : function(){
+                    var x=Scope.Text;
+                    return x.name1;
+                }
+            };
+        }
+            
+        
+    </script>
+
 </body>
 </html>
