[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,7 @@
         <br>
         <div align="center">
             Hi! Welcome IMAD enthusiast Dhruvi's Web application.<br>
+            <input type="button" onclick="count()">
          </div>
          
         
